Até a aula 15 criação do carrinho

--- a/Quiron.LojaVirtual.Web/Views/Shared/_Layout.cshtml
+++ b/Quiron.LojaVirtual.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     </div>
     <div class="row panel">
         <div id="categorias" class="col-xs-3">
-            Minhas categorias
+            @Html.Action("Menu", "Categoria")
         </div>
 
 
