--- a/Quiron.LojaVirtual.Web/Views/Vitrine/ListaProdutos.cshtml
+++ b/Quiron.LojaVirtual.Web/Views/Vitrine/ListaProdutos.cshtml
@@ -3,7 +3,7 @@
 
 
 @{
-    ViewBag.Title = "ListaProudutos";
+    ViewBag.Title = "ListaProdutos";
 }
 
 @foreach (var p in Model.Produtos)
@@ -12,5 +12,5 @@
 }
 
 <div class="btn-group pull-right">
-    @Html.PageLinks(Model.Paginacao, x => Url.Action("ListaProdutos", new { pagina = x }))
+    @Html.PageLinks(Model.Paginacao, x => Url.Action("ListaProdutos", new { pagina = x, categoria = Model.CategoriaAtual}))
 </div>
