--- a/Quiron.LojaVirtual.Web/Views/Shared/_Layout.cshtml
+++ b/Quiron.LojaVirtual.Web/Views/Shared/_Layout.cshtml
@@ -12,9 +12,15 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse" role="navigation">
-        <a class="navbar-brand" href="#">Quiron Loja Virtual - Seu esporte é aqui </a>
-    </div>
+   
+   
+        <div class="navbar navbar-inverse" role="navigation">
+            <a class="navbar-brand" href="#">Quiron Loja Virtual - Seu esporte é aqui </a>
+
+            @Html.Action("Resumo", "Carrinho")
+        </div>
+        
+
     <div class="row panel">
         <div id="categorias" class="col-xs-3">
             @Html.Action("Menu", "Categoria")
